--- a/Window Shopper/Window Shopper/Base.lproj/Main.storyboard
+++ b/Window Shopper/Window Shopper/Base.lproj/Main.storyboard
@@ -27,30 +27,48 @@
                                     <constraint firstAttribute="width" constant="75" id="aSf-4F-sWR"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hsc-it-4H0" customClass="tfCurrency" customModule="Window_Shopper" customModuleProvider="target">
-                                <rect key="frame" x="60" y="160" width="255" height="46"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hsc-it-4H0" customClass="tfCurrency" customModule="Window_Shopper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="160" width="335" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="255" id="B5H-Nk-oEZ"/>
-                                    <constraint firstAttribute="height" constant="46" id="aqP-7E-CPX"/>
+                                    <constraint firstAttribute="height" constant="40" id="aqP-7E-CPX"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OlM-jy-9Kh" customClass="tfCurrency" customModule="Window_Shopper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="215" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="AcY-pe-Z6p"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="MJE-0s-Ulo"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="OlM-jy-9Kh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3LQ-jV-RwN"/>
+                            <constraint firstItem="OlM-jy-9Kh" firstAttribute="top" secondItem="Hsc-it-4H0" secondAttribute="bottom" constant="15" id="9DN-Nb-VLd"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9jf-wX-zGG"/>
                             <constraint firstItem="Hsc-it-4H0" firstAttribute="top" secondItem="jvO-XW-WUZ" secondAttribute="bottom" constant="45" id="Ao3-QO-jTu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hsc-it-4H0" secondAttribute="trailing" constant="20" id="CIp-Sc-hVR"/>
                             <constraint firstItem="Hsc-it-4H0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FGO-Rg-RHn"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IPz-Xc-Jv6"/>
+                            <constraint firstItem="Hsc-it-4H0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MPV-ai-6eX"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="TsU-9M-hig"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WL1-7K-Mid"/>
                             <constraint firstItem="jvO-XW-WUZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hLg-rI-0YA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OlM-jy-9Kh" secondAttribute="trailing" constant="20" id="kbF-11-S82"/>
                             <constraint firstItem="jvO-XW-WUZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="mfJ-JA-i5t"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="txtPrice" destination="OlM-jy-9Kh" id="0ds-ap-De3"/>
+                        <outlet property="txtWage" destination="Hsc-it-4H0" id="A2F-Fv-MTR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
