--- a/Window Shopper/Window Shopper/Base.lproj/Main.storyboard
+++ b/Window Shopper/Window Shopper/Base.lproj/Main.storyboard
@@ -46,26 +46,62 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bm2-am-WBc">
+                                <rect key="frame" x="20" y="300" width="335" height="62.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="52"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8uj-DP-q0R">
+                                <rect key="frame" x="138" y="367.5" width="98" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="27" id="9db-By-ftQ"/>
+                                    <constraint firstAttribute="width" constant="98" id="PLV-bf-cdX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nY9-9b-JWc">
+                                <rect key="frame" x="16" y="606" width="343" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Clear Calculator">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="onClearTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wc1-eo-cEW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="OlM-jy-9Kh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3LQ-jV-RwN"/>
+                            <constraint firstItem="bm2-am-WBc" firstAttribute="width" secondItem="OlM-jy-9Kh" secondAttribute="width" id="6Ab-Q9-cfj"/>
                             <constraint firstItem="OlM-jy-9Kh" firstAttribute="top" secondItem="Hsc-it-4H0" secondAttribute="bottom" constant="15" id="9DN-Nb-VLd"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9jf-wX-zGG"/>
                             <constraint firstItem="Hsc-it-4H0" firstAttribute="top" secondItem="jvO-XW-WUZ" secondAttribute="bottom" constant="45" id="Ao3-QO-jTu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hsc-it-4H0" secondAttribute="trailing" constant="20" id="CIp-Sc-hVR"/>
                             <constraint firstItem="Hsc-it-4H0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FGO-Rg-RHn"/>
+                            <constraint firstItem="bm2-am-WBc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I6D-xz-qjg"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IPz-Xc-Jv6"/>
                             <constraint firstItem="Hsc-it-4H0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MPV-ai-6eX"/>
+                            <constraint firstItem="bm2-am-WBc" firstAttribute="top" secondItem="OlM-jy-9Kh" secondAttribute="bottom" constant="45" id="QWM-q8-ATr"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="TsU-9M-hig"/>
                             <constraint firstItem="1ms-rm-ffm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WL1-7K-Mid"/>
+                            <constraint firstItem="8uj-DP-q0R" firstAttribute="top" secondItem="bm2-am-WBc" secondAttribute="bottom" constant="5" id="bqx-hp-nmu"/>
                             <constraint firstItem="jvO-XW-WUZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hLg-rI-0YA"/>
+                            <constraint firstItem="8uj-DP-q0R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="igs-bT-Lio"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OlM-jy-9Kh" secondAttribute="trailing" constant="20" id="kbF-11-S82"/>
                             <constraint firstItem="jvO-XW-WUZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="mfJ-JA-i5t"/>
+                            <constraint firstItem="8uj-DP-q0R" firstAttribute="top" secondItem="bm2-am-WBc" secondAttribute="bottom" constant="5" id="vcT-ct-uqc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="btnClear" destination="nY9-9b-JWc" id="8pl-mT-wSe"/>
+                        <outlet property="lblHours" destination="8uj-DP-q0R" id="6gz-JU-rgu"/>
+                        <outlet property="lblResult" destination="bm2-am-WBc" id="cK6-pP-FqQ"/>
                         <outlet property="txtPrice" destination="OlM-jy-9Kh" id="0ds-ap-De3"/>
                         <outlet property="txtWage" destination="Hsc-it-4H0" id="A2F-Fv-MTR"/>
                     </connections>
